
buildscript {
    repositories {
        mavenCentral()
        mavenLocal()
    }
}

plugins {
    id "java"
    id "java-library"
    id "checkstyle"
    id "jacoco"
    id "signing"
    id "maven-publish"
    id "io.github.gradle-nexus.publish-plugin" version "1.3.0"
    id "idea"
}

configurations.all {
    // check for updates every build for dependencies with: 'changing: true'
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

repositories {
    mavenLocal()
    // Before LaunchDarkly release artifacts get synced to Maven Central they are here along with snapshots:
    maven { url "https://oss.sonatype.org/content/groups/public/" }
    mavenCentral()
}

allprojects {
    group = 'com.launchdarkly'
    version = "${version}"
    archivesBaseName = 'launchdarkly-java-server-sdk-ai'
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
}

ext {
    sdkBasePackage = "com.launchdarkly.sdk.server.ai"
}

ext.versions = [
    // The *lowest* version of the base SDK we are compatible with. LDClientInterface
    // appears in this library's public signature, so it is exposed as an `api` dependency.
    "sdk": "7.14.0"
]

ext.libraries = [:]

dependencies {
    // Exposed on the public API surface (LDClientInterface), therefore `api` not `implementation`.
    api "com.launchdarkly:launchdarkly-java-server-sdk:${versions.sdk}"

    testImplementation "org.hamcrest:hamcrest-all:1.3"
    testImplementation "junit:junit:4.13.2"
    testImplementation "org.mockito:mockito-core:3.12.4"
}

// Non-public implementation detail lives in `com.launchdarkly.sdk.server.ai.internal` and its
// subpackages. We deliberately exclude it from the published Javadoc and sources jars so it is
// not part of the supported, documented surface. See package-info / README for the convention.
def internalPackageGlob = "**/com/launchdarkly/sdk/server/ai/internal/**"

java {
    withJavadocJar()
    withSourcesJar()
}

javadoc {
    // exclude internal implementation classes from the published API documentation
    exclude internalPackageGlob
    options {
        // suppress noisy "no comment" warnings; checkstyle enforces Javadoc on the public surface
        addStringOption('Xdoclint:all,-missing', '-quiet')
    }
}

tasks.named('sourcesJar') {
    // keep internal implementation classes out of the published sources jar
    exclude internalPackageGlob
}

test {
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
        showStandardStreams = true
        exceptionFormat = 'full'
    }
}

jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
}

checkstyle {
    toolVersion = "9.3"
    configFile = file("${project.rootDir}/checkstyle.xml")
}

// The vendored Mustache source (com.launchdarkly.sdk.server.ai.internal.mustache) is third-party
// code kept as close to upstream as possible; do not subject it to our checkstyle conventions.
def vendoredPackageGlob = "**/com/launchdarkly/sdk/server/ai/internal/mustache/**"
tasks.named('checkstyleMain') {
    exclude vendoredPackageGlob
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            groupId = 'com.launchdarkly'
            artifactId = project.archivesBaseName

            pom {
                name = project.archivesBaseName
                description = 'LaunchDarkly Server-Side AI SDK for Java'
                url = 'https://github.com/launchdarkly/java-core'
                licenses {
                    license {
                        name = 'The Apache License, Version 2.0'
                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                    }
                }
                developers {
                    developer {
                        name = 'LaunchDarkly'
                        email = 'team@launchdarkly.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/launchdarkly/java-core.git'
                    developerConnection = 'scm:git:ssh:git@github.com:launchdarkly/java-core.git'
                    url = 'https://github.com/launchdarkly/java-core'
                }
            }
        }
    }
    repositories {
        mavenLocal()
    }
}

nexusPublishing {
    clientTimeout = java.time.Duration.ofMinutes(2) // we've seen extremely long delays in creating repositories
    repositories {
        sonatype {
            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
        }
    }
}

signing {
    sign publishing.publications.mavenJava
}

tasks.withType(Sign) {
    onlyIf { !"1".equals(project.findProperty("LD_SKIP_SIGNING")) } // so we can build jars for testing in CI
}
